<resources>
    <string name="app_name">My Application</string>
    <string name="mainIcon">TODO</string>
    <string name="button1">학 부 공 지 사 항</string>
    <string name="button2">교 수 / 연 구 실</string>
    <string name="button3">학 사 일 정</string>
    <string name="button4">학 부 사 무 실</string>
    <string name="mainIcon2">TODO</string>
    <string name="bell">bell</string>
    <string name="bar">I</string>
    <string name="menutitle">Title</string>
    <string name="menuicon">TODO</string>
    <string name="naviicon">naviicon</string>
    <string name="searchicon">TODO</string>
    <string name="pagebtn1">1</string>
    <string name="pagebtn2">2</string>
    <string name="pagebtn3">3</string>
    <string name="pagebtn4">4</string>
    <string name="searchtext">검색</string>
    <string name="pagebtnright"><![CDATA[>>]]></string>
    <string name="pagebtnleft"><![CDATA[<<]]></string>
</resources>