<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".MainButton">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="104dp"
        android:contentDescription="@string/mainIcon2"
        app:layout_constraintBottom_toTopOf="@+id/mainbtn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118"
        app:srcCompat="@drawable/icon2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/mainbtn1"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="55dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/button1"
        android:textColor="@color/red"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/mainbtn2"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="55dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/button2"
        android:textColor="@color/red"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainbtn1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/mainbtn3"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="55dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/button3"
        android:textColor="@color/red"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainbtn2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/mainbtn4"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="55dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/button4"
        android:textColor="@color/red"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainbtn3"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="56dp" />
</androidx.constraintlayout.widget.ConstraintLayout>