<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/red"
    app:contentInsetStart="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="195dp"
            android:layout_height="21dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="49dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="167dp"
            android:layout_marginBottom="16dp"
            android:text="@string/menutitle"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/verbar"
            android:layout_width="6dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="38dp"
            android:layout_marginTop="-2dp"
            android:layout_marginEnd="367dp"
            android:layout_marginBottom="12dp"
            android:text="@string/bar"
            android:textColor="@android:color/white"
            android:textSize="48sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/navbtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/menuicon"
            app:srcCompat="@drawable/pinclipart_com_menu_clip_art_5328945" />

        <ImageView
            android:id="@+id/bellicon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="369dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/menuicon"
            app:srcCompat="@drawable/icon5" />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navi_manu"/>

</androidx.appcompat.widget.Toolbar>